# zClone

./: .gitignore  Cargo.toml  DESIGN_TOKENS.md  Makefile  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  README.md  TESTING_PHASE1.md  full_prompt.md  hello.md  plan.md
.github/workflows/: ci.yml
crates/zclone-api/: Cargo.toml
crates/zclone-api/src/: client.rs  lib.rs
crates/zclone-core/: Cargo.toml
crates/zclone-core/src/: lib.rs  messaging.rs  models.rs  persistence.rs  session.rs
crates/zclone-ui/: Cargo.toml
crates/zclone-ui/src/: component_specs.rs  components.rs  lib.rs  motion.rs  theme.rs
src/: main.rs
