[package]
name = "zclone-core"
version = "0.1.0"
edition = "2021"
description = "Core data models and business logic for zClone"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
